--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -33,6 +33,22 @@
 
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
+	<style>
+        .form-group {
+            display: flex;
+            align-items: center;
+        }
+    
+        .form-group input[type="text"] {
+            margin-left: -50px; /* Adjust this value as needed */
+        }
+
+        .form-group button[type="submit"] {
+        margin-top: 20px; /* Adjust this value to move the button down */
+    }
+    </style>
+
+
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
