--- a/Public/all-Customer.html
+++ b/Public/all-Customer.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>practicum</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
@@ -511,6 +511,7 @@ async function searchAssets() {
             displayAssets(data);
         }
     } catch (error) {
+        console.error('Error:', error);
         console.error('Error:', error);
     }
 }
