--- a/Public/Home.html
+++ b/Public/Home.html
@@ -664,6 +664,7 @@
 	
 			} else {
 				console.log('message submitted successfully:', data.message);
+				console.log('check');
 				alert(data.message);
 				
 				document.getElementById('Name').value = '';
